[gd_scene load_steps=4 format=3 uid="uid://jj3a7uxrbx6j"]

[ext_resource type="Script" uid="uid://c0bq6wyu12ge4" path="res://Scripts/bos_1.gd" id="1_826rs"]
[ext_resource type="Texture2D" uid="uid://c5t0jqtxwegt5" path="res://Assets/enemies/tile_0008.png" id="1_fao5k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dg5f8"]
radius = 46.3897

[node name="Bos1" type="Area2D" groups=["Enemies"]]
script = ExtResource("1_826rs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dg5f8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, 9.53674e-07)
scale = Vector2(3.85417, 3.85417)
texture = ExtResource("1_fao5k")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
